--- a/aws-blog-elasticsearch-cascading-commoncrawl/commoncrawl.cascading.elasticsearch/pom.xml
+++ b/aws-blog-elasticsearch-cascading-commoncrawl/commoncrawl.cascading.elasticsearch/pom.xml
@@ -135,4 +135,19 @@
 		</dependency>
 
 	</dependencies>
+	
+	<build>
+		<plugins>
+			<plugin>
+			  <groupId>org.apache.maven.plugins</groupId>
+			  <artifactId>maven-compiler-plugin</artifactId>
+			  <version>2.1</version>
+			  <configuration>
+			    <source>${jdk.version}</source>
+			    <target>${jdk.version}</target>
+			    <compilerArgument>-proc:none</compilerArgument>
+			  </configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
