--- a/aws-blog-elasticsearch-cascading-commoncrawl/commoncrawl.cascading.elasticsearch/pom.xml
+++ b/aws-blog-elasticsearch-cascading-commoncrawl/commoncrawl.cascading.elasticsearch/pom.xml
@@ -3,15 +3,15 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.amazonaws.bigdatablog</groupId>
-	<artifactId>commoncrawl.cascading.elasticsearch</artifactId>
+	<groupId>com.stecl.test</groupId>
+	<artifactId>custom-commoncrawl.cascading.elasticsearch</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
-	<name>commoncrawl.cascading.elasticsearch</name>
+	<name>custom-commoncrawl.cascading.elasticsearch</name>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<jdk.version>1.7</jdk.version>
+		<jdk.version>1.6</jdk.version>
 		<hadoop.version>2.4.0</hadoop.version>
 		<avro.version>1.7.4</avro.version>
 		<slf4j.version>1.7.4</slf4j.version>
@@ -71,6 +71,12 @@
 			<version>${hadoop.version}</version>
 			<scope>provided</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.hadoop</groupId>
+			<artifactId>hadoop-aws</artifactId>
+			<version>2.6.0</version>
+		</dependency>
 
 		<dependency>
 			<groupId>cascading</groupId>
@@ -105,7 +111,7 @@
 		<dependency>
 			<groupId>org.elasticsearch</groupId>
 			<artifactId>elasticsearch-hadoop</artifactId>
-			<version>2.0.1</version>
+			<version>2.0.2</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.slf4j</groupId>
@@ -116,7 +122,7 @@
 		<dependency>
 			<groupId>org.elasticsearch</groupId>
 			<artifactId>elasticsearch-hadoop-cascading</artifactId>
-			<version>2.0.1</version>
+			<version>2.0.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
@@ -133,36 +139,18 @@
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
 		</dependency>
-
 	</dependencies>
-
+	
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.1</version>
-				<configuration>
-					<source>${jdk.version}</source>
-					<target>${jdk.version}</target>
-					<compilerArgument>-proc:none</compilerArgument>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>com.ning.maven.plugins</groupId>
-				<artifactId>maven-duplicate-finder-plugin</artifactId>
-				<version>1.0.9</version>
-				<configuration>
-					<failBuildInCaseOfConflict>false</failBuildInCaseOfConflict>
-				</configuration>
-				<executions>
-					<execution>
-						<phase>verify</phase>
-						<goals>
-							<goal>check</goal>
-						</goals>
-					</execution>
-				</executions>
+			  <groupId>org.apache.maven.plugins</groupId>
+			  <artifactId>maven-compiler-plugin</artifactId>
+			  <version>2.1</version>
+			  <configuration>
+			    <source>${jdk.version}</source>
+			    <target>${jdk.version}</target>
+			  </configuration>
 			</plugin>
 		</plugins>
 	</build>
