--- a/extract-common-crawl-urls/commoncrawl.cascading.extracturls/pom.xml
+++ b/extract-common-crawl-urls/commoncrawl.cascading.extracturls/pom.xml
@@ -130,6 +130,21 @@
 			<version>1.5.0</version>
 		</dependency>
 		<dependency>
+		    <groupId>org.apache.tika</groupId>
+		    <artifactId>tika-parsers</artifactId>
+		    <version>1.10</version>
+	    </dependency>
+	    <dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-compress</artifactId>
+			<version>1.10</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpcore</artifactId>
+			<version>4.4.3</version>
+		</dependency>
+		<dependency>
 			<groupId>net.java.dev.jets3t</groupId>
 			<artifactId>jets3t</artifactId>
 			<version>0.9.0</version>
