--- a/extract-common-crawl-urls/commoncrawl.cascading.extracturls/src/main/resources/config.properties
+++ b/extract-common-crawl-urls/commoncrawl.cascading.extracturls/src/main/resources/config.properties
@@ -3,7 +3,7 @@ mapreduce.map.speculative=false
 mapreduce.reduce.speculative=false
 es.port=9202
 es.target.index=common-crawl/wat
-inPath=src/test/resources/sample.wat
+inPath=src/test/resources/sample.warc.gz
 wetPathPrefix=s3n://aws-publicdatasets/
 platform=DISTRIBUTED
 testCreateCommonCrawlFlowDefOutput=target/test/output/testCreateCommonCrawlFlowDefOutput
